--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,39 @@
+.title {
+    text-align: center;
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+}
+
+.view {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+li {
+    margin: 10px 0;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+button {
+    margin-top: 20px;
+    /*padding: 10px 20px;*/
+    align-items: center;
+    font-size: 16px;
+    cursor: pointer;
 }
 
